[package]
name = "thingfx"
version = "0.1.0"
authors = ["Evan Pratten <braincell-check@gmail.com>"]
edition = "2018"
description = "A thin graphics layer for extending to control other graphics libraries"
documentation = "https://docs.rs/thingfx"
readme = "README.md"
homepage = "https://github.com/braincell-check/thingfx"
repository = "https://github.com/braincell-check/thingfx"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nalgebra = "0.30.0"
# parry2d = "0.7.1"
